# contentpilot

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
contentpilot/: __init__.py  cli.py
contentpilot/commands/: analyze.py  batch.py  brief.py  check.py  draft.py  inspire.py  pipeline.py  publish.py  repurpose.py  title.py  topic.py  track.py
contentpilot/utils/: ai.py  config.py  templates.py  validators.py
reports/: prompt_test_report.json
scripts/: optimize.sh  push.sh  weekly-optimize.sh
tests/: prompt_tests.py  test_contentpilot.py
web/: app.py
