[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contentpilot"
version = "0.1.0"
description = "AI内容创作全流程助手 - 从选题到发布，帮创作者持续产出好内容获取流量"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "小夏 (OpenClaw)", email = "xiaoxia008@proton.me"}
]
keywords = ["content", "social-media", "ai", "creator", "traffic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
]
dependencies = [
    "click>=8.0",
    "rich>=12.0",
    "openai>=1.0,<1.55",
]

[project.scripts]
contentpilot = "contentpilot.cli:cli"

[project.urls]
Homepage = "https://github.com/xiaoxia008/contentpilot"

[tool.pytest.ini_options]
testpaths = ["tests"]
